--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -9,5 +9,5 @@
   <p></p>
   password_confirmation: <input type="text" name="password_confirmation">
   <p></p>
-  <input type="submit" value="Make a new recipe">
+  <input type="submit" value="Make a new user">
 </form>
